nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: pers-zubkov
  name: nginx-test
  annotations: {}
labels:
  app: nginx-test
spec:
  selector:
    matchLabels:
      app: nginx-test
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
        - name: container
          image: 'nginxinc/nginx-unprivileged:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  paused: false
