nginx-service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-test
  namespace: pers-zubkov
spec:
  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: nginx-test
