nginx-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx-test
  namespace: pers-zubkov
  labels:
    app: nginx-test
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: nginx-http
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
